kong-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-gateway
  labels:
    istio-injection: enabled
