kong-gateway/kong-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-gateway
  labels:
    app: kong-gateway
  namespace: kong-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: kong-gateway
    spec:
      containers:
      - image: kong/kong-gateway:latest
        name: kong-gateway
        ports:
        - containerPort: 8000
          name: proxy
          protocol: TCP
        - containerPort: 8100
          name: metrics
          protocol: TCP
        volumeMounts:
        - name: kong-config
          mountPath: /etc/kong
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
      volumes:
      - name: kong-config
        configMap:
          name: kong-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kong-gateway
  name: kong-gateway
spec:
  type: ClusterIP
  selector:
    app: kong-gateway
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: kong-gateway
  name: kong-gateway
spec:
  gateways:
  - istio-ingress/ingress-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: kong-gateway
